fix: fix overflow issues

--- a/client/src/components/MainPage/components/HeroSection/AuthUser/HeroSecAuthUser.module.scss
+++ b/client/src/components/MainPage/components/HeroSection/AuthUser/HeroSecAuthUser.module.scss
@@ -13,8 +13,9 @@
   top: 0;
   z-index: 1;
   width: 100vw;
-  height: 608px !important;
+  height: 700px !important;
   animation: fadeInBlack 1s;
+  transform: scale(1.2);
 }
 
 #main-banner-video {
