--- a/client/src/components/MainPage/components/MainBanner/MainBanner.module.scss
+++ b/client/src/components/MainPage/components/MainBanner/MainBanner.module.scss
@@ -16,6 +16,7 @@
     display: flex;
     align-items: center;
     height: 100%;
+    overflow: hidden;
   }
   &__content {
     position: absolute;
